k8s/app/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-v1
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/version: v1
spec:
  selector:
    app.kubernetes.io/name: web
    app.kubernetes.io/version: v1
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 9113
      targetPort: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: web-v2
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/version: v2
spec:
  selector:
    app.kubernetes.io/name: web
    app.kubernetes.io/version: v2
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 9113
      targetPort: metrics
